<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/explorarFragment">

    <fragment
        android:id="@+id/explorarFragment"
        android:name="com.example.costura.ui.explorar.ExplorarFragment"
        android:label="@string/nav_explorar"
        tools:layout="@layout/fragment_explorar">
        <action
            android:id="@+id/action_explorar_to_detalle"
            app:destination="@id/detalleFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/calcularFragment"
        android:name="com.example.costura.ui.calcular.CalcularFragment"
        android:label="@string/nav_calcular"
        tools:layout="@layout/fragment_calcular">
        <action
            android:id="@+id/action_calcular_to_resultados"
            app:destination="@id/resultadosFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/resultadosFragment"
        android:name="com.example.costura.ui.resultados.ResultadosFragment"
        android:label="@string/nav_resultados"
        tools:layout="@layout/fragment_resultados">
        <action
            android:id="@+id/action_resultados_to_detalle_local"
            app:destination="@id/detalleLocalFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/detalleLocalFragment"
        android:name="com.example.costura.ui.detalle.DetalleLocalFragment"
        android:label="@string/nav_detalle"
        tools:layout="@layout/fragment_detalle_local">
        <argument
            android:name="patronId"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>

    <fragment
        android:id="@+id/subirFragment"
        android:name="com.example.costura.ui.subir.SubirFragment"
        android:label="@string/nav_subir"
        tools:layout="@layout/fragment_subir" />

    <fragment
        android:id="@+id/perfilFragment"
        android:name="com.example.costura.ui.perfil.PerfilFragment"
        android:label="@string/nav_perfil"
        tools:layout="@layout/fragment_perfil">
        <action
            android:id="@+id/action_perfil_to_detalle"
            app:destination="@id/detalleFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_perfil_to_historial"
            app:destination="@id/historialFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_perfil_to_editar"
            app:destination="@id/editarPerfilFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/editarPerfilFragment"
        android:name="com.example.costura.ui.perfil.EditarPerfilFragment"
        android:label="@string/perfil_editar"
        tools:layout="@layout/fragment_editar_perfil" />

    <fragment
        android:id="@+id/historialFragment"
        android:name="com.example.costura.ui.historial.HistorialFragment"
        android:label="@string/nav_historial"
        tools:layout="@layout/fragment_historial" />

    <fragment
        android:id="@+id/detalleFragment"
        android:name="com.example.costura.ui.detalle.DetalleFragment"
        android:label="@string/nav_detalle"
        tools:layout="@layout/fragment_detalle">
        <argument
            android:name="patronId"
            app:argType="string"
            android:defaultValue="" />
        <action
            android:id="@+id/action_detalle_to_editar"
            app:destination="@id/editarPatronFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/editarPatronFragment"
        android:name="com.example.costura.ui.detalle.EditarPatronFragment"
        android:label="@string/editar_titulo"
        tools:layout="@layout/fragment_editar_patron">
        <argument
            android:name="patronId"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

</navigation>
